--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body
 }
 h1
 {
-  
+
   color: #66BFBF;
   margin-top: 2.6rem;
   font-size: 5.625rem;
@@ -41,6 +41,12 @@ h3
 .bottom
 {
 
+}
+
+.skill-row
+{
+  width: 50%;
+  margin: 100px auto 100px auto;
 }
 
 .pro{
