--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,10 @@ h3
 
 .skill-row
 {
-  width: 50%;
+  width: 25%;
   margin: 100px auto 100px auto;
+  text-align:left;
+  line-height:2;
 }
 
 .pro{
@@ -68,4 +70,22 @@ h3
 .footer-link
 {
   color:  #11999E;
+}
+.web{
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+.coder
+{
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+.code-skill{
+  clear: left
+}
+
+.web-skills{
+  clear: right;
 }
