--- a/css/styles.css
+++ b/css/styles.css
@@ -1,87 +1,154 @@
-body
-{
-  margin:0;
-  text-align:center;
+body {
+  margin: 0;
+  text-align: center;
   font-family: 'Merriweather', serif;
-  font-size: 200%
+  font-size: 200%;
+  color: #40514E;
 }
-h1
-{
 
+h1 {
   color: #66BFBF;
   margin-top: 2.6rem;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
-  font-family: 'Sacramento',cursive;
+  font-family: 'Sacramento', cursive;
 }
-h2
-{
-  font-weight:normal;
+
+h2 {
+  font-weight: normal;
   color: #66BFBF;
   font-size: 2.5rem;
-  font-family: 'Montserrat',sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  padding-bottom: 10px;
 }
-h3
-{
-  color:  #11999E;
-  font-family: 'Montserrat',sans-serif;
+
+h3 {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
 }
-.top
-{
+
+p {
+  line-height: 2;
+  font-size: 20px;
+}
+
+hr {
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6;
+}
+
+.top-container {
   background-color: #E4F9F5;
-  position:relative;
+  position: relative;
   padding-top: 100px;
 }
 
-.middle
-{
-
+.middle-container {
+  margin: 100px 0;
 }
 
-.bottom
-{
-
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
+  font-size: 5px;
 }
 
-.skill-row
-{
-  width: 25%;
+.skill-row {
+  width: 50%;
   margin: 100px auto 100px auto;
-  text-align:left;
-  line-height:2;
+  text-align: left;
 }
 
-.pro{
+.pro {
   text-decoration: underline;
 }
 
-.bottom-cloud{
+.bottom-cloud {
   position: relative;
-  left: 300px;
+  left: 50px;
   bottom: 300px;
 }
 
-.top-cloud{
+.top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
-.footer-link
-{
-  color:  #11999E;
+.footer-link {
+  color: #11999E;
+  font-size: 20px;
 }
-.web{
-  width: 25%;
+
+.web {
+  width: 30%;
   float: left;
-  margin-right: 30px;
+  margin-right: 10px;
 }
-.coder
-{
-  width: 25%;
+
+.coder {
+  width: 30%;
   float: right;
   margin-left: 30px;
 }
+
+.intro {
+  width: 30%;
+  margin: auto;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+  padding: 20px 0;
+}
+
+.copyright {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #1199E);
+  background-image: -moz-linear-gradient(top, #11cdd4, #1199E);
+  background-image: -ms-linear-gradient(top, #11cdd4, #1199E);
+  background-image: -o-linear-gradient(top, #11cdd4, #1199E);
+  background-image: linear-gradient(to bottom, #11cdd4, #1199E);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30ecb;
+  background-image: -webkit-linear-gradient(top, #30ecb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30ecb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30ecb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30ecb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30ecb, #2bc4ad);
+  text-decoration: none;
+}
+
+/*
 .code-skill{
   clear: left
 }
@@ -89,3 +156,4 @@ h3
 .web-skills{
   clear: right;
 }
+*/
