--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,14 @@ h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
+h5{
+    font-weight: normal;
+    color: #66BFBF;
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    padding-bottom: 10px;
+}
+
 p {
   line-height: 2;
   font-size: 20px;
@@ -98,6 +106,7 @@ a:hover {
   width: 30%;
   float: left;
   margin-right: 10px;
+  height:160px
 }
 
 .coder {
